--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="song_title_pod_vzrivi">Под Взрывы</string>
     <string name="song_title_sigareti_i">Сигареты и Время</string>
     <string name="song_title_sneg_iz">Снег из Пенопласта</string>
+    <string name="text_next">next</string>
+    <string name="text_random_on">random: ON</string>
+    <string name="text_random_off">random: OFF</string>
 
 </resources>
